# AgentLab

./: .gitignore  .readthedocs.yaml  Makefile  README.md  TESTING_README.md  _sandbox  add_study_to_repro_journal.py  agentlab_configs.py  analyse.py  conf.py  domain_specific_instructions.txt  index.rst  launch_command.py  launch_jephhinter.py  launch_jephhinter.sh  launch_jephhinter_recursive.sh  longmemevalv2_trajectory_collection_journal.json  main.py  main_exp_new_models.py  main_jephhinter.py  main_webarena.py  main_workarena_cheat.py  main_workarena_cheat_custom.py  main_workarena_debug.py  main_workarena_generic_rerun.py  myExp.py  osworld_docker_test.py  print_trajectories.py  pyproject.toml  reproducibility_journal.csv  requirements.txt  tmp_run_miniwob_experiment.py  update_successful_rerun_journal.py
.github/workflows/: code_format.yml  darglint.yml  deploy-landing-page.yml  pypi.yml  python_version_compatibility.yml  readthedocs.yml  unit_tests.yml
ICML2024/: script.ipynb
conf/: gaia_agent.yaml
docs/: conf.py  requirements.txt
docs/landing_page/: README.md  index.html
docs/landing_page/projects/: browsergym.html  focus_agent.html  workarena-plus-plus.html  workarena.html
docs/source/: agentlab.agents.agent_args.rst  agentlab.agents.dynamic_prompting.rst  agentlab.agents.generic_agent.agent_configs.rst  agentlab.agents.generic_agent.generic_agent.rst  agentlab.agents.generic_agent.generic_agent_prompt.rst  agentlab.agents.generic_agent.reproducibility_agent.rst  agentlab.agents.generic_agent.rst  agentlab.agents.generic_agent.tmlr_config.rst  agentlab.agents.generic_agent_hinter.rst  agentlab.agents.hint_use_agent.rst  agentlab.agents.most_basic_agent.rst  agentlab.agents.rst  agentlab.agents.tapeagent.rst  agentlab.agents.tool_use_agent.rst  agentlab.agents.visualwebarena.few_shots.rst  agentlab.agents.visualwebarena.rst  agentlab.analyze.agent_xray.rst  agentlab.analyze.inspect_results.rst  agentlab.analyze.rst  agentlab.experiments.args.rst  agentlab.experiments.exp_utils.rst  agentlab.experiments.graph_execution_ray.rst  agentlab.experiments.launch_exp.rst  agentlab.experiments.list_openai_models.rst  agentlab.experiments.reproduce_study.rst  agentlab.experiments.reproducibility_util.rst  agentlab.experiments.rst  agentlab.experiments.study.rst  agentlab.experiments.view_dep_graph.rst  agentlab.llm.base_api.rst  agentlab.llm.chat_api.rst  agentlab.llm.huggingface_utils.rst  agentlab.llm.llm_configs.rst  agentlab.llm.llm_utils.rst  agentlab.llm.prompt_templates.rst  agentlab.llm.rst  agentlab.llm.tracking.rst  agentlab.rst  agentlab.ui_assistant.rst  agentlab.utils.rst  (+5 more)
docs/source/_templates/: module.rst.jinja  package.rst.jinja  toc.rst.jinja
experiments/: osworld_debug_task_ids.json  run_miniwob.py  run_osworld.py  test_mcp.py
experiments/generic/: run_generic_agent.py  run_generic_agent.sh
experiments/hinter/: run_hinter_agent.py  run_hinter_agent.sh
scripts/: run_gaia.py  run_gaia.sh
src/agentlab/: __init__.py  _version.py  actions.py  ui_assistant.py
src/agentlab/agents/: README.md  __init__.py  agent_args.py  agent_utils.py  cheating_agent.py  cheating_custom_agent.py  debug_agent.py  dynamic_prompting.py  react_toolcall_agent.py  tapeagent.py  utils.py
src/agentlab/analyze/: ICML_2024_CR_results.ipynb  ICML_2024_results.ipynb  ICML_2024_results.py  agent_controller.py  agent_xray.py  archive_studies.py  covariate_std_err.py  episode_to_html.py  error_analysis.py  error_categorization.py  hparam_analysis.ipynb  hparam_analysis.py  inspect_results.ipynb  inspect_results.py  json_xray.py  overlay_utils.py  plot_tools.py  results.ipynb  run_agentlab_controller.py  server.py  tapes.py  test_agent_xray.py
src/agentlab/benchmarks/: abstract_env.py  gaia.py  multitool_gym.py  osworld.md  osworld.py  osworld_axtree_preprocessing.py  setup.md  setup_benchmark.py  tau_bench.py  web_task.py
src/agentlab/cheat_custom/: __init__.py  registry.py  workarena_adapters.py
src/agentlab/demos/: combine_chat_window.py  concur_assistant.py  concur_storage_state.py  demo_directions_to_frenchtech.py  demo_directions_to_k24.py  demo_stickman.py  extract_video.py  make_video_grid.py  readme.md
src/agentlab/experiments/: args.py  custom_benchmark.py  exp_configs.py  exp_utils.py  get_ray_url.py  graph_execution.py  graph_execution_dask.py  graph_execution_multiprocessing.py  graph_execution_ray.py  launch_command.py  launch_exp.py  list_openai_models.py  loop.py  miniwob_tasks_all.csv  multi_server.py  reproduce_study.py  reproducibility_script.py  reproducibility_util.py  study.py  study_generators.py  task_collections.py  view_dep_graph.py
src/agentlab/llm/: README.md  base_api.py  chat_api.py  exp_configs_OSS.py  huggingface_utils.py  llm_utils.py  (+13 more)
tests/: my_test.py  mytest.py  test_agent.py  test_agentlab_xray.py  test_apriel.py  test_main.py  test_readme_examples.py  test_ui_assistant.py  verify_rate_limit_anthropic.py
tests/agents/: test_agent.py  test_bm25_retriever_agent.py  test_embedding_retriever_agent.py  test_focus_agent.py  test_gaia_agent.py  test_generic_prompt.py  test_visualwebarena_agent.py  test_vwa_agent.py  test_webarena_basic_agent.py
tests/analyze/: test_agentlab_xray.py  test_agentlab_xray_ui.py  test_gradio.py  test_overlay_utils.py  test_xray_ui.py
tests/benchmarks/: test_osworld.py
tests/experiments/: test_dask.py  test_exp_configs.py  test_graph_execution.py  test_launch_exp.py  test_multi_server.py  test_ray.py  test_reproducibility_util.py  test_study.py  test_task_collection.py
tests/gradio/: test_agent_xray.py
tests/llm/: test_chat_api.py  test_huggingface_utils.py  test_langchain_utils.py  test_litellm_api.py  test_llm_configs.py  test_llm_utils.py  test_response_api.py  test_tracking.py
tests/utils/: test_bootstrap.py
tutorials/1_launch_interactive_agent/: readme.md
tutorials/2_eval_on_miniwob/: experiment.py  inspect_results.ipynb  launch_experiments.ipynb  readme.md
tutorials/3_prompt_injection/: attack_0.txt  attack_2.txt  prompt.txt  prompt_0.txt  prompt_2.txt  prompt_injection.ipynb  readme.md
(+210 files in other folders)
